# keurocalc

./: CMakeLists.txt  INSTALL  keurocalc-1.0.2.tgz.delta  keurocalc-1.0.2.tgz.id  keurocalc.lsm  keurocalc.spec  keurocalc_1.0.1.orig.tar.gz.delta  keurocalc_1.0.3.orig.tar.gz.delta  keurocalc_1.0.3.orig.tar.gz.id  keurocalc_1.1.0.orig.tar.gz.delta  keurocalc_1.1.0.orig.tar.gz.id  keurocalc_1.2.0.orig.tar.gz.delta  keurocalc_1.2.0.orig.tar.gz.id  keurocalc_1.2.1.orig.tar.gz.delta  keurocalc_1.2.1.orig.tar.gz.id  keurocalc_1.2.2.orig.tar.gz.delta  keurocalc_1.2.2.orig.tar.gz.id  keurocalc_1.2.3.orig.tar.gz.delta  keurocalc_1.2.3.orig.tar.gz.id
doc/: CMakeLists.txt  da.po  de.po  es.po  et.po  fr.po  it.po  keurocalc.pot  nb.po  nl.po  pt.po  pt_BR.po  sv.po  uk.po
doc/da/: CMakeLists.txt  index.docbook
doc/de/: CMakeLists.txt  index.docbook
doc/es/: CMakeLists.txt  index.docbook
doc/et/: CMakeLists.txt  index.docbook
doc/fr/: CMakeLists.txt  index.docbook
doc/it/: CMakeLists.txt  index.docbook
doc/nb/: CMakeLists.txt  index.docbook
doc/nl/: CMakeLists.txt  index.docbook
doc/pt/: CMakeLists.txt  index.docbook
doc/pt_BR/: CMakeLists.txt  index.docbook
doc/sv/: CMakeLists.txt  index.docbook
doc/uk/: CMakeLists.txt  index.docbook
po/: CMakeLists.txt  ar.po  bg.po  br.po  ca.po  ca@valencia.po  cs.po  curconvd.pot  da.po  de.po  el.po  en_GB.po  es.po  et.po  fr.po  ga.po  gl.po  hu.po  it.po  ja.po  ka.po  keurocalc.pot  nb.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@Latn.po  sr@latin.po  sv.po  ta.po  tr.po  uk.po  zh_TW.po
po/ar/: keurocalc.po
po/bg/: CMakeLists.txt  keurocalc.po
po/bs/: CMakeLists.txt  curconvd.po  keurocalc.po
po/ca/: CMakeLists.txt  curconvd.po  keurocalc.po
po/ca@valencia/: CMakeLists.txt  curconvd.po  keurocalc.po
po/cs/: curconvd.po  (+2 more)
(+110 files in other folders)
